@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-25T08:11:06Z",
-  "count_outdated" : 1266,
-  "uniques_outdated" : 798,
+  "timestamp" : "2024-05-25T16:09:21Z",
+  "count_outdated" : 1268,
+  "uniques_outdated" : 800,
   "count" : 1297,
   "uniques" : 823,
   "clones" : [
-    {
-      "timestamp": "2024-05-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2024-05-12T00:00:00Z",
       "count": 1,
