@@ -1,3 +1,12 @@
+2024-05-25T16:09:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9236682077 # 305
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-25
+* notice: last 14d: unq all: 4 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 798 1266 / 823 1297
+* notice: next accum: outdated-unq outdated-all / unq all: 800 1268 / 823 1297
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-05-11] / []
+
 2024-05-25T08:11:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9234062018 # 304
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-25
